basic components added

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-
+  <div class="label">Label</div>
+  <input class="input checkbox-input" type="checkbox" />
+  <input class="input number-input" type="number" min="0" max="100">
+  <div class="spin-wrap">
+    <div class="spin"></div>
+  </div>
 </body>
 
 </html>
