--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech task</title>
   <link rel="stylesheet" href="./css/style.css" />
-  <script src="./index.js"></script>
+  <script defer src="./components/progress/progress.js" type="text/javascript"></script>
+  <script defer src="./components/input/number/number.js" type="text/javascript"></script>
+  <script defer src="./components/input/checkbox/checkbox.js" type="text/javascript"></script>
+  <script defer src="./index.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <div class="spin" data-state="normal" data-value="0"></div>
+  <div class="progress-wrap">
+    <div class="progress"></div>
+  </div>
   <label class="label">
     <input class="input number-input value" type="number">
     <span class="label-name">Value</span>
