--- a/src/index.html
+++ b/src/index.html
@@ -6,28 +6,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech task</title>
   <link rel="stylesheet" href="./css/style.css" />
-  <script defer src="./components/progress/progress.js" type="text/javascript"></script>
-  <script defer src="./components/input/number/number.js" type="text/javascript"></script>
-  <script defer src="./components/input/checkbox/checkbox.js" type="text/javascript"></script>
+  <script src="./components/progress/progress.js" type="text/javascript"></script>
+  <script src="./components/input/number/number.js" type="text/javascript"></script>
+  <script src="./components/input/checkbox/checkbox.js" type="text/javascript"></script>
   <script defer src="./index.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <div class="progress-wrap">
-    <div class="progress"></div>
+
+  <div class="app-box">
+    <span class="app-name">Progress</span>
+
+    <div class="progress-wrap">
+      <div class="progress"></div>
+    </div>
+
+    <div class="input-container">
+      <label class="label">
+        <input class="input number-input value" type="number">
+        <span class="label-name">Value</span>
+      </label>
+
+      <label class="label">
+        <input class="input checkbox-input animate" type="checkbox" />
+        <span class="label-name">Animate</span>
+      </label>
+
+      <label class="label">
+        <input class="input checkbox-input hide" type="checkbox" />
+        <span class="label-name">Hide</span>
+      </label>
+    </div>
   </div>
-  <label class="label">
-    <input class="input number-input value" type="number">
-    <span class="label-name">Value</span>
-  </label>
-  <label class="label">
-    <input class="input checkbox-input animate" type="checkbox" />
-    <span class="label-name">Animate</span>
-  </label>
-  <label class="label">
-    <input class="input checkbox-input hide" type="checkbox" />
-    <span class="label-name">Hide</span>
-  </label>
+
 </body>
 
 </html>
