small fixes, readme update

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech task</title>
   <link rel="stylesheet" href="./css/style.css" />
-  <script src="./components/progress/progress.js" type="text/javascript"></script>
-  <script src="./components/input/number/number.js" type="text/javascript"></script>
-  <script src="./components/input/checkbox/checkbox.js" type="text/javascript"></script>
+  <script defer src="./components/progress/progress.js" type="text/javascript"></script>
+  <script defer src="./components/input/number/number.js" type="text/javascript"></script>
+  <script defer src="./components/input/checkbox/checkbox.js" type="text/javascript"></script>
   <script defer src="./index.js" type="text/javascript"></script>
 </head>
 
