--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech task</title>
-  <link rel="stylesheet" href="./css/style.css" />
-  <script defer src="./components/progress/progress.js" type="text/javascript"></script>
-  <script defer src="./components/input/number/number.js" type="text/javascript"></script>
-  <script defer src="./components/input/checkbox/checkbox.js" type="text/javascript"></script>
-  <script defer src="./index.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="./src/css/style.css" />
+  <script defer src="./src/components/progress/progress.js" type="text/javascript"></script>
+  <script defer src="./src/components/input/number/number.js" type="text/javascript"></script>
+  <script defer src="./src/components/input/checkbox/checkbox.js" type="text/javascript"></script>
+  <script defer src="./src/index.js" type="text/javascript"></script>
 </head>
 
 <body>
